Improve code style
 - Fix if there is not sourcer pos (?)
 - Extract attackHostile
 - Use fleeFromHostile
 - Extract moveToHostileConstructionSite
 - Use a findClosestStructure method
 - Extract findInRangeStructures
 - Extract getSpawnableSpawns and getCreepConfig
 - Extract addRole to stats
 - Move debug config to config.js

--- a/.jshintrc
+++ b/.jshintrc
@@ -131,7 +131,8 @@
     "SUBSCRIPTION_TOKEN": false,
     "cache": false,
     "visualizer": false,
-    "RawVisual": false
+    "RawVisual": false,
+    "LOOK_CREEPS": false
   },
   "node": true
 }
