--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,6 @@
+machine:
+  node:
+    version: 7.10.1
 dependencies:
   pre:
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
@@ -8,7 +11,4 @@ deployment:
     commands:
       - npm run deploy
       - npm publish || true
-  workspace:
-    branch: workspace
-    commands:
-      - npm run deploy
+      - node utils/grafana.js
